# instmodel

./: .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.tf  Dockerfile.torch  Dockerfile.torch.cuda  README.md  setup.cfg
.github/workflows/: pypi-publish.yml
custom_cuda_builds/: Dockerfile.torch.cuda13
instmodel/: __init__.py  instruction_model.py  model.py  model_torch.py  tf.py  torch.py
tests/: test_model.py  test_model_torch.py  test_tf.py  test_torch.py
tests/files/: instmodel.json
