# setup.cfg

[metadata]
name = instmodel
version = 1.0.2
author = Joao Ferreira
author_email = joaoprcf@gmail.com
description = A package that provides advanced coding tools for training and deploying AI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Joaoprcf/instmodel
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    pandas
    scipy
    scikit-learn

[options.extras_require]
tensorflow =
    tensorflow>=2.20
    protobuf>=6.0
pytorch =
    torch>=2.0
